--- a/static/html/ecmscript.html
+++ b/static/html/ecmscript.html
@@ -3,12 +3,43 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+        .parents{
+            width: 500px;
+            height: 500px;
+            margin: auto;
+            background: red;
+            visibility: hidden;
+        }
+        .children{
+            width: 400px;
+            height: 400px;
+            margin: auto;
+            background: green;
+        }
+        .son{
+            width: 300px;
+            height: 300px;
+            margin: auto;
+            background: yellow;
+            visibility: visible;
+        }
+    </style>
 </head>
 <body>
+<div class="parents">
+    <div class="children">
+        <div class="son">
+
+        </div>
+    </div>
+</div>
+
+
 <script type="text/javascript">
 // Object.getPrototypeOf([]) == Array.prototype
-console.log(Object.getPrototypeOf({}));
-console.log(Array.prototype)
+// console.log(Object.getPrototypeOf({}));
+// console.log(Array.prototype)
 // typeof Math.LN2 === 'number';
 // typeof Infinity === 'number';
 // typeof NaN === 'number'; //尽管NaN是"Not-A-Number"的缩写
